namespace java com.github.alphafoxz.oneboot.sdk.thrift.iface
service SdkThriftIface {
    bool generateAll()
}